@@ -365,7 +365,7 @@ function Options() //{{{
                   "<li><b>b</b>: Bookmarks</li>" +
                   "<li><b>h</b>: History</li></ul>" +
                   "The order is important, so <code class=\"command\">:set complete=bs</code> would list bookmarks first, and then any available quick searches.<br/>" +
-                  "Add 'sort' to the <code class=\"option\">'wildoptions'</code> option if you want all entries sorted.",
+                  "Add <code class=\"option\">'sort'</code> to the <code class=\"option\">'wildoptions'</code> option if you want all entries sorted.",
             default_value: "sfbh",
             validator: function (value) { if (/[^sfbh]/.test(value)) return false; else return true; }
         }
@@ -593,6 +593,14 @@ function Options() //{{{
             short_help: "Use visual bell instead of beeping on errors",
             setter: function(value) { Options.setPref("visualbell", value); Options.setFirefoxPref("accessibility.typeaheadfind.enablesound", !value); },
             default_value: false
+        }
+    ));
+    addOption(new Option(["visualbellstyle"], "string",
+        {
+            short_help: "CSS specification of the visual bell",
+            help: "To hide the visual bell use a value of \"display: none;\".",
+            setter: function(value) { if (!value) value = "display: none;"; Options.setPref("visualbellstyle", value); },
+            default_value: "background-color: black; color: black;"
         }
     ));
     addOption(new Option(["wildmode", "wim"], "stringlist",
